Assembly Browser: Show type members in popup in graph view

--- a/sources/ILSpyVisualizer/AssemblyBrowser/Screens/SearchScreenView.xaml
+++ b/sources/ILSpyVisualizer/AssemblyBrowser/Screens/SearchScreenView.xaml
@@ -219,7 +219,7 @@
                                     <TextBlock VerticalAlignment="Center"
                                                Margin="8, 6, 10, 5"
                                                                                       
-                                               Visibility="{Binding ShowVisualizeCommand, Converter={StaticResource BooleanToVisibilityConverter}}">
+                                               Visibility="{Binding CanVisualize, Converter={StaticResource BooleanToVisibilityConverter}}">
                                         <Hyperlink Command="{Binding VisualizeCommand}"
                                                    Style="{StaticResource HyperlinkStyle}">
                                             <TextBlock Text="Visualize"/>
