--- a/sources/ILSpyVisualizer/AssemblyBrowser/Dictionaries/DataTemplatesDictionary.xaml
+++ b/sources/ILSpyVisualizer/AssemblyBrowser/Dictionaries/DataTemplatesDictionary.xaml
@@ -56,30 +56,19 @@
                     Style="{StaticResource BorderStyle}"                            
                     Background="Transparent">
                 <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition/>
-                    </Grid.RowDefinitions>
-                    <Border x:Name="brdDivider" BorderThickness="0, 0, 0, 1"
-                                SnapsToDevicePixels="True"
-                                BorderBrush="Black">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition/>
-                                <ColumnDefinition Width="Auto"/>
-                            </Grid.ColumnDefinitions>
-                            <TextBlock Style="{StaticResource TypeNameTextBlockStyle}"
+
+                    <TextBlock Style="{StaticResource TypeNameTextBlockStyle}"
                                        HorizontalAlignment="Center"
                                        VerticalAlignment="Center"
                                        TextOptions.TextRenderingMode="Grayscale"/>
-                            <Border Background="White"
+                    <Border Background="White"
                                     CornerRadius="8"
                                     x:Name="pnlButtons"
                                     Visibility="Collapsed"
                                     HorizontalAlignment="Right"
                                     VerticalAlignment="Center">
-                                <StackPanel Orientation="Horizontal">
-                                    <Button VerticalAlignment="Center"                                                                      
+                        <StackPanel Orientation="Horizontal">
+                            <Button VerticalAlignment="Center"                                                                      
                                         Command="{Binding NavigateCommand}" 
                                         Margin="4, 0"
                                         Width="16"
@@ -90,7 +79,7 @@
                                         Style="{StaticResource ImageButtonStyle}"
                                             ToolTip="Navigate"/>
 
-                                    <Button VerticalAlignment="Center"                                                                      
+                            <Button VerticalAlignment="Center"                                                                      
                                         Command="{Binding VisualizeCommand}" 
                                         Margin="4, 0"
                                         Width="16"
@@ -99,25 +88,20 @@
                                         MinHeight="0"
                                         Background="{StaticResource RightArrowDrawing}"
                                         Style="{StaticResource ImageButtonStyle}"
-                                        Visibility="{Binding ShowVisualizeCommand, Converter={StaticResource BooleanToVisibilityConverter}}"
+                                        Visibility="{Binding CanVisualize, Converter={StaticResource BooleanToVisibilityConverter}}"
                                             ToolTip="Visualize"/>
 
-                                    <ToggleButton IsChecked="{Binding ShowMembers}"                                          
+                            <Button Command="{Binding ShowMembersCommand}"                   
                                               Width="16"
                                               Height="16"
                                               Margin="4, 0"                                          
                                               Background="{StaticResource FlatMagnifierDrawing}"
                                               Style="{StaticResource ImageButtonStyle}"
-                                                  ToolTip="Show members"/>
-                                </StackPanel>
-                            </Border>
-                        </Grid>
+                                                  ToolTip="Show members"
+                                    Visibility="{Binding CanShowMembers, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+                        </StackPanel>
                     </Border>
-                    <ItemsControl x:Name="icMembers"
-                                  ItemsSource="{Binding Members}"
-                                  Grid.Row="1"
-                                  Margin="5" />
-                </Grid>
+                </Grid>               
             </Border>
             <Border Style="{StaticResource BorderStyle}">
                 <Border.Effect>
@@ -126,10 +110,10 @@
             </Border>
         </Grid>
         <DataTemplate.Triggers>
-            <DataTrigger Binding="{Binding ShowMembers}" Value="False">
+            <!--<DataTrigger Binding="{Binding ShowMembers}" Value="False">
                 <Setter TargetName="icMembers" Property="Visibility" Value="Collapsed"/>
                 <Setter TargetName="brdDivider" Property="BorderThickness" Value="0"/>
-            </DataTrigger>
+            </DataTrigger>-->
             <Trigger SourceName="brdMain" Property="IsMouseOver" Value="True">
                 <Setter TargetName="pnlButtons" Property="Visibility" Value="Visible"/>
                 <Setter TargetName="brdMain" Property="Background" Value="White"/>
