--- a/sources/ILSpyVisualizer/AssemblyBrowser/Screens/GraphScreenView.xaml
+++ b/sources/ILSpyVisualizer/AssemblyBrowser/Screens/GraphScreenView.xaml
@@ -27,7 +27,52 @@
             </Style>
         </ResourceDictionary>
     </UserControl.Resources>
-    <Grid>
+    <Grid x:Name="grdMain">
+        <Popup PlacementTarget="{Binding ElementName=grdMain}"
+               Placement="Relative" 
+               HorizontalOffset="15"
+               VerticalOffset="15"               
+               DataContext="{Binding TypeForDetails}"
+               StaysOpen="False"
+               x:Name="detailsPopup"
+               AllowsTransparency="True">
+            <Grid Margin="0, 0, 6, 6">
+                <Border Background="White"
+                        BorderBrush="#555555"
+                        BorderThickness="1"
+                        CornerRadius="8">
+                    <Grid Margin="8, 8, 8, 5">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
+                    
+                        <TextBlock Text="{Binding Name}"
+                                   ToolTip="{Binding FullName}"
+                                   FontSize="16"
+                                   Foreground="#555555"
+                                   Margin="0, 0, 0, 4"/>
+                        
+                        <ScrollViewer VerticalScrollBarVisibility="Auto"                                  
+                                      Grid.Row="1">
+                            <ItemsControl x:Name="icMembers"
+                                          ItemsSource="{Binding Members}"
+                                          Grid.Row="1" />
+                        </ScrollViewer>
+                    </Grid>
+                    
+                   
+                </Border>
+                <Border BorderBrush="#555555"
+                        BorderThickness="1"
+                        CornerRadius="8">
+                    <Border.Effect>
+                        <DropShadowEffect/>
+                    </Border.Effect>
+                </Border>
+            </Grid>
+        </Popup>
+
         <zoom:ZoomControl x:Name="zoomControl"
                               Grid.Row="1"  
                               Zoom="0.2"
@@ -39,7 +84,7 @@
                                              OverlapRemovalAlgorithmType="FSA"
                                              HighlightAlgorithmType="Simple" />
         </zoom:ZoomControl>
-        
+
         <Border VerticalAlignment="Bottom"
                 HorizontalAlignment="Right"
                 Background="White"
@@ -59,6 +104,6 @@
                        FontWeight="Bold"
                        Foreground="#555555"
                        Margin="4, 0"/>
-        </Border>        
+        </Border>
     </Grid>
 </UserControl>
