--- a/sources/ILSpyVisualizer/AssemblyBrowser/Screens/SearchScreenView.xaml
+++ b/sources/ILSpyVisualizer/AssemblyBrowser/Screens/SearchScreenView.xaml
@@ -141,7 +141,7 @@
             <ItemsControl.Template>
                 <ControlTemplate>
                     <ScrollViewer CanContentScroll="True"
-                                      VerticalScrollBarVisibility="Auto">
+                                      VerticalScrollBarVisibility="Visible">
                         <VirtualizingStackPanel Orientation="Vertical"
                                                     VirtualizingStackPanel.IsVirtualizing="True"
                                                     VirtualizingStackPanel.VirtualizationMode="Recycling"
@@ -163,7 +163,7 @@
                                     <ColumnDefinition/>
                                     <ColumnDefinition Width="Auto"/>
                                 </Grid.ColumnDefinitions>
-                                <TextBlock ToolTip="{Binding FullName}"
+                                <TextBlock ToolTip="{Binding ExtendedInfo}"
                                            FontSize="16"
                                            FontWeight="Bold"
                                            Margin="9, 6"
